fix: improvement on mobile website

--- a/src/components/Form/SearchPlayer.scss
+++ b/src/components/Form/SearchPlayer.scss
@@ -28,3 +28,18 @@
     width: 30%;
     margin-top: 2%;
 }
+
+.mobile_search_player_results_card {
+    width: 100%;
+    margin-top: 3%;
+}
+
+.mobile_search_player_results_container {
+    padding-bottom: 15%;
+}
+
+.mobile_search_player_form {
+    width: 70%;
+    margin: 3% auto 3% auto;
+    text-align: center;
+}
